	Fixed: Wrong template name passed to the onLoadTemplate event (MySQL server implementation)

PLUGINS
	Fixed: Plugin backend files must no longer be removed on error
	Updated: Plugin API to version 0.2.11

VENDOR
	Updated: jQuery library to version 1.1.11
	Updated: jQuery UI library to version 1.1.11
	Updated: jQuery DataTables plugin to version 1.10.2

------------------------------------------------------------------------------------------------------------------------
1.1.13
------------------------------------------------------------------------------------------------------------------------

2014-07-20: Laurent Declercq
	RELEASE i-MSCP 1.1.13

DOCS
	Updated: INSTALL files

SERVICES
	Fixed: Apache mod_version module is not always static
	Fixed: The parameter innodb_use_native_aio is not available in MySQL < 5.5

------------------------------------------------------------------------------------------------------------------------
1.1.12
------------------------------------------------------------------------------------------------------------------------

2014-07-16: Laurent Declercq
	RELEASE i-MSCP 1.1.12

ADDONS
	Fixed: Quotation marks must be escaped in PhpMyAdmin configuration file
	Fixed: Quotation marks must be escaped in Roundcube configuration file
	Updated: Required Roundcube addon package version is now 0.5.0.*@dev

CONFIGS
	Removed: GUI_CERT_DIR variable (replaced by CONF_DIR variable)
	Cleanup: Package files, config files
	Removed: Ubuntu imscp.conf file (Debian conffile is now used when no conffile is available for the selected distro)
	Removed: Ubuntu layout file (Debian layout is now used when no layout is available for the selected distro)

DAEMON
	Removed: Useless daemon logs + small fixes
	Updated: Version to 1.2.1

DATABASE
	Fixed: Error messages from database updates are not detailed
	Fixed: Ftp, Mail and SQL passwords are not decrypted during database update r53
	Fixed: Infinite loop in iMSCP_Update_Database::dropIndexByColumn()