@@ -124,6 +124,10 @@ sub _loadData
 		return 1;
 	}
 
+	# The Base server IP must always be here because even if not used by any domain,
+	# the panel use it
+	$rdata->{$main::imscpConfig{'BASE_SERVER_IP'}} = undef;
+
 	@{$self->{'ipaddrs'}} = keys %{$rdata};
 
 	$rdata = $db->doQuery(
@@ -187,6 +191,12 @@ sub _loadData
 	unless(ref $rdata eq 'HASH') {
 		error($rdata);
 		return 1;
+	}
+
+	if($main::imscpConfig{'PANEL_SSL_ENABLED'} == 'yes') {
+		# The Base server IP must always be here because even if not used by any domain,
+        # the panel use it
+		$rdata->{$main::imscpConfig{'BASE_SERVER_IP'}} = undef;
 	}
 
 	@{$self->{'ssl_ipaddrs'}} = keys %{$rdata};
