@@ -39,6 +39,9 @@ VENDOR
 	Updated: jQuery UI library to version 1.1.11
 	Updated: jQuery DataTables plugin to version 1.10.2
 
+TICKETS
+	Fixed #1125: Defect - Modules::Ips - Returns only domain IPs
+
 ------------------------------------------------------------------------------------------------------------------------
 1.1.13
 ------------------------------------------------------------------------------------------------------------------------
